Fixed caption cutoff on slides
Now caption is fully displayed on each slide.

--- a/stylesheets/elements.css
+++ b/stylesheets/elements.css
@@ -34,7 +34,7 @@ Image credits: unsplash.com
 .hero-caption {
     position: absolute;
     top: 15%;
-    left: 35%;
+    left: 17%;
     bottom: 65%;
     z-index: 3;
     color: #fff;
